<resources>
    <string name="app_name">Conn_Garrett</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="Ace_Restaurant">Ace Restaurant!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pizza">Pizza</string>
    <string name="meatlovers">Meatlovers</string>
    <string name="veggie">Veggie</string>
    <string name="BBQ">BBQ</string>
    <string name="Pepperoni">Pepperoni</string>
    <string name="Cheese">Cheese</string>
    <string name="Pepperoni_Price">$10</string>
    <string name="meatlovers_Price">$11</string>
    <string name="Cheese_price">$9</string>
    <string name="BBQ_price">$13</string>
    <string name="veggie_price">$8</string>
    <string name="Fries">Fries</string>
    <string name="Breadsticks">Breadsticks</string>
    <string name="Mozarella">Mozarella Sticks</string>
    <string name="Hotwings">Hot Wings</string>
    <string name="OnionRings">Onion Rings</string>
    <string name="Breadstick_price">$5</string>
    <string name="Fries_price">$4</string>
    <string name="Mozarella_price">$3</string>
    <string name="Hotwings_price">$8</string>
    <string name="Onionrings_price">$6</string>
    <string name="Meatball">Meatball</string>
    <string name="Turkey">Turkey</string>
    <string name="Chickenparm">Chicken Parmesan</string>
    <string name="Italian">Italian</string>
    <string name="Cuban">Cuban</string>
    <string name="Meatball_price">$5</string>
    <string name="Turkey_price">$4</string>
    <string name="Chickenparm_price">$3</string>
    <string name="Italian_price">$8</string>
    <string name="Cuban_price">$6</string>
    <string name="ChoppedSalad">Chopped Salad</string>
    <string name="avacado">Avacado Salad</string>
    <string name="Chickensalad">Chicken Salad</string>
    <string name="eggsalad">Egg Salad</string>
    <string name="spinach">Spinach Salad</string>
    <string name="chopped_salad_price">$5</string>
    <string name="avacado_price">$4</string>
    <string name="Chickensalad_price">$3</string>
    <string name="eggsalad_price">$8</string>
    <string name="spinach_salad_price">$6</string>
    <string name="my_order">My Order</string>
    <string name="add">ADD</string>
    <string name="my_order_contents">my_order_contents</string>
    <string name="price_text_view">price_text_view</string>
    <string name="order">com.example.conn_garrett.order</string>
    <string name="price">com.example.conn_garrett.price</string>
</resources>
